# PocketManager

./: .gitignore  LICENSE  README.md  REVIEW.md  install.sh  pyproject.toml  requirements.txt
pocketmanager/: __init__.py  cli.py  commit.txt
pocketmanager/core/: backup.py  config.py  cron.py  health.py  instance.py  pangolin.py  pocketbase.py  ports.py  selfupdate.py  sftp.py  state.py  systemd.py
pocketmanager/dashboard/: api.py  app.py  auth.py
pocketmanager/dashboard/templates/: dashboard.html
tests/: conftest.py
tests/integration/: test_backup_restore.py  test_cli.py  test_core.py  test_lifecycle.py
